[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.1",
    "langchain==0.1.13",
    "langchain-community>=0.0.28",
    "langchain-core>=0.1.32",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "fastembed>=0.4.2",
    "fastapi>=0.125.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.12.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.38.0",
    "pymupdf>=1.26.7",
    "langchain-groq>=0.1.5",
    "streamlit>=1.52.2",
    "requests>=2.32.5",
]
